static/style.css
body {
    background-color: blue;
    width: 80%;
}

.chatbox{
    height: 100%;
    width: 100%;
}

h1 {
    width: auto;
    color: white;
    margin-bottom: 5px;
    font-size: 20pt;
    text-align: center;
}

ul {
    padding-left: 10px;
    height: 80%;
    width: auto;
    border: 3px solid red;
    background-image: url(boxxy-8755-2560x1600.jpg);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    margin: 0;
    overflow-y:auto;
}

li {
    list-style-type: none;
    margin-top: 10px;
    color: white;
    font-size: 16pt;
}

.button {
    margin-top: 0px;
    height: 4%;
    width: auto;
    border: 3px solid white;
}

.input {
    width: 95%;
    height: 100%;
}

.addButton {
    height: 100%;
    width: 5%;
}

.users {
    width: 10%;
    position: absolute;
    left: 35%;
    align-items: center;
    justify-content: center;
    text-align: center;
    color: white;
    font-size: 20pt;
    border: 3px solid white;
}

